--- a/index.html
+++ b/index.html
@@ -3612,7 +3612,7 @@
             </div>
 
             <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
-            <p class="skill-text" style="text-align: left;"> HTML/CSS/JS, Web-Development, React.js, TailwindCSS, Node.js, Express.js, MySQL </p>
+            <p class="skill-text" style="text-align: left;"> HTML/CSS/JS, Web-Development </p>
 
             <div class="learn-more"><a href="#ForMich" class="link-orange"> Click for More Information </a></div>
             <div id="ForMich" class="modal">
@@ -3624,7 +3624,8 @@
                     <br>
                     <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded
                         with interactive features, such as color changing background on click, and personalized voting
-                        information pages for each college. Includes a 300-person staff directory using MySQL. Check it out at www.4mich.org.
+                        information pages for each college. Includes a 300-person staff directory using MySQL. Check it
+                        out at www.4mich.org.
                     </p>
                     <br>
                     <a href="#Projects" class="box-close">
@@ -3633,6 +3634,40 @@
                 </div>
             </div>
         </div>
+        <div class="project-box">
+            <h3 style="color: #dcf4fc; margin: auto;">For Michigan Staff Directory</h3>
+            <!--replace with gemini project-->
+            <div class="fade-in2 box3 ">
+                <img src="StaffDirectory.png">
+            </div>
+            <p class="project-text" style="color: #FB8500; text-align: left;">
+                SKILLS: </p>
+            <p class="skill-text" style="text-align: left;"> ReactJS, TailwindCSS, Express.js, Node.js, MySQL </p>
+
+            <div class="learn-more"><a href="#Game" class="link-orange"> Click for More Information </a></div>
+            <div id="Game" class="modal">
+                <div class="content">
+                    <h2 style="text-align: center; color: #8ECAE6;">
+                        An visually-appleasing and interactive staff-directory...
+                    </h2>
+                    <br>
+                    <div>
+                        <p class="project-desc"> A 300 person staff directory with a visually appealing user interface
+                            which queries data based on certain requests and is secured with Google OAuth Login.</p>
+                    </div>
+                    <br>
+                    <a href="#Projects" class="box-close">
+                        X
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+    <br>
+    <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">OneVote</h3>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/-eGkraEZ6HA"
@@ -3664,9 +3699,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <br>
-    <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> DocuDog </h3>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/Qq7_72aoV08"
@@ -3684,8 +3716,12 @@
                     </h2>
                     <br>
                     <div>
-                        <p class="project-title" class="project-desc"> 
-                            Utilized Python to customize queries for Gemini 1.5 Pro, allowing users to extract specific details from various documents and ask questions based on those details, such as obtaining quantitative data from business reports or helping one understand a function thoroughly from an API. Also designed a query routing system that parses user queries and generates tailored sub-queries for the large language model, improving information retrieval efficiency.
+                        <p class="project-title" class="project-desc">
+                            Utilized Python to customize queries for Gemini 1.5 Pro, allowing users to extract specific
+                            details from various documents and ask questions based on those details, such as obtaining
+                            quantitative data from business reports or helping one understand a function thoroughly from
+                            an API. Also designed a query routing system that parses user queries and generates tailored
+                            sub-queries for the large language model, improving information retrieval efficiency.
                         </p>
                     </div>
                     <br>
@@ -3696,35 +3732,6 @@
             </div>
         </div>
 
-        <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
-            <div class="fade-in2 box3 ">
-                <img src="aihandwritingmodel.png">
-            </div>
-
-            <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
-            <p class="skill-text" style="text-align: left;"> OpenCV, PyTorch, HTML/CSS/JS, Express.js </p>
-
-            <div class="learn-more"><a href="#Handwriting" class="link-orange"> Click for More Information </a></div>
-            <div id="Handwriting" class="modal">
-                <div class="content">
-                    <h2 style="text-align: center; color: #8ECAE6;">
-                        A web application to translate handwriting into legible text...
-                    </h2>
-                    <br>
-                    <p class="project-desc"> An application with a visually-appleasing user
-                        interface with an integrated
-                        model developed using OpenCV and PyTorch to detect handwritten components and convert into a
-                        .txt
-                        file.
-                    </p>
-                    <br>
-                    <a href="#Projects" class="box-close">
-                        X
-                    </a>
-                </div>
-            </div>
-        </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.wevideo.com/view/3252017933"
@@ -3757,6 +3764,35 @@
     </div>
     <br>
     <div class="flex-container proj-box-cont add_margin">
+        <div class="project-box">
+            <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
+            <div class="fade-in2 box3 ">
+                <img src="aihandwritingmodel.png">
+            </div>
+
+            <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
+            <p class="skill-text" style="text-align: left;"> OpenCV, PyTorch, HTML/CSS/JS, Express.js </p>
+
+            <div class="learn-more"><a href="#Handwriting" class="link-orange"> Click for More Information </a></div>
+            <div id="Handwriting" class="modal">
+                <div class="content">
+                    <h2 style="text-align: center; color: #8ECAE6;">
+                        A web application to translate handwriting into legible text...
+                    </h2>
+                    <br>
+                    <p class="project-desc"> An application with a visually-appleasing user
+                        interface with an integrated
+                        model developed using OpenCV and PyTorch to detect handwritten components and convert into a
+                        .txt
+                        file.
+                    </p>
+                    <br>
+                    <a href="#Projects" class="box-close">
+                        X
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">RoboPicasso</h3>
             <div class="fade-in2 box3 ">
@@ -3805,32 +3841,6 @@
                     <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments
                         technology in order to help with knee rehabilitation, especially with ACL tears. </p>
                     </p>
-                    <br>
-                    <a href="#Projects" class="box-close">
-                        X
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">For Michigan Staff Directory</h3> <!--replace with gemini project-->
-            <div class="fade-in2 box3 ">
-                <img src="StaffDirectory.png">
-            </div>
-            <p class="project-text" style="color: #FB8500; text-align: left;">
-                SKILLS: </p>
-            <p class="skill-text" style="text-align: left;"> ReactJS, TailwindCSS, Express.js, Node.js, MySQL </p>
-
-            <div class="learn-more"><a href="#Game" class="link-orange"> Click for More Information </a></div>
-            <div id="Game" class="modal">
-                <div class="content">
-                    <h2 style="text-align: center; color: #8ECAE6;">
-                        An visually-appleasing and interactive staff-directory...
-                    </h2>
-                    <br>
-                    <div>
-                        <p class="project-desc"> A 300 person staff directory with a visually appealing user interface which queries data based on certain requests and is secured with Google OAuth Login.</p>
-                    </div>
                     <br>
                     <a href="#Projects" class="box-close">
                         X
