--- a/index.html
+++ b/index.html
@@ -3970,13 +3970,13 @@
         </i>-->
 
 
-        <!-- &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-regular fa-file fa-bounce">
+         &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="Shriya Biddala - Resume.pdf"> <i class="fa-regular fa-file fa-bounce">
             <span class="file-lines-text"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
-                Master Resume </span>
-            </i> </a> -->
+                Resume </span>
+            </i> </a> 
         <br>
         <div style="display: flex; justify-content: space-between;">
             <p class="copy-right-text">
