--- a/index.html
+++ b/index.html
@@ -3530,7 +3530,7 @@
                     and
                     Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
                     applications in different industries, such as cloud computing, intelligent devices, and data
-                    science.
+                    science. I am also interested in full-stack and web development, as I enjoy blending my creativity and repertiore to develop applications. 
                     <br> I
                     also am a big equity activist who pushes for equity and diversity in the technology sector and
                     aspires
@@ -3560,7 +3560,6 @@
             <h2> <a href="#Home" class="link-orange right_text"> EDUCATION </a> </h2>
             <p> University of Michigan - Ann Arbor </p>
             <p> Bachelor of Science in Engineering in Computer Science, Minor in Electrical Engineering </p>
-            <p> Expected Graduation: April 2026 </p>
             <p> Coursework: <br> EECS 280: Programming and Data Structures <br> EECS 203: Discrete Mathematics <br>
                 ENGR
                 100: Robotics Mechanisms <br> ROB 101: Computational Linear Algebra <br> EECS 281: Data Structures
