--- a/index.html
+++ b/index.html
@@ -3624,7 +3624,7 @@
                     <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded
                         with interactive features, such as color changing background on click, and personalized voting
                         information pages for each college. Includes a 300-person staff directory using MySQL. Check it
-                        out at www.4mich.org.
+                        out at <a href="www.4mich.org"> www.4mich.org. </a>
                     </p>
                     <br>
                     <a href="#Projects" class="box-close">
