changes to about me

--- a/index.html
+++ b/index.html
@@ -3530,9 +3530,9 @@
                     and
                     Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
                     applications in different industries, such as cloud computing, intelligent devices, and data
-                    science. I am also interested in full-stack and web development, as I enjoy blending my creativity and repertiore to develop applications. 
-                    <br> I
-                    also am a big equity activist who pushes for equity and diversity in the technology sector and
+                    science. I am also interested in in full-stack and web development, as I enjoy blending my creativity and repertiore to develop applications. 
+                    <br> In addition to being a CS enthusiast, I 
+                    am a big equity activist who pushes for equity and diversity in the technology sector and
                     aspires
                     to
                     combine both my technological and activist background to develop real-world tecnological, equitable
