--- a/index.html
+++ b/index.html
@@ -3987,6 +3987,27 @@
 
 
     <script src="Home.js"> </script>
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec';
+        const formy = document.getElementById('my-form');
+        formy.addEventListener('submit', (e) => {
+            e.preventDefault(); // Prevent default form submission
+
+            fetch(scriptURL, {
+                method: 'POST',
+                body: new FormData(formy)
+            })
+            .then(response => {
+                if (response.ok) {
+                    window.location.href = 'Form-Success';
+                } else {
+                    throw new Error('Network response was not ok.');
+                }
+            })
+            .catch(error => console.error('Error!', error.message));
+        });
+      </script>
 </body>
 
 </html>
