--- a/index.html
+++ b/index.html
@@ -3524,23 +3524,18 @@
             <div class=" fade-in1 left-oriented about-me">
                 <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
                 <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
-                    Science. I have partaken in multiple research projects at the university level, notably developing a
-                    mental
-                    chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology
-                    and
-                    Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
-                    applications in different industries, such as cloud computing, intelligent devices, and data
-                    science. I am also interested in in full-stack and web development, as I enjoy blending my creativity and repertiore to develop applications. 
+                    Science. I currently work as a freelance full stack developer, having developed websites for organizations such as For Michigan and clients alike. 
+                    I have also partaken in multiple machine learning related research projects at the university level, notably developing a
+                    mental chatbot, on top of engineering. <br> My interests lie within artificial intelligence and its prowess for automation, in addition to blending my creativity and technical repertiore to create web applications.
                     <br> In addition to being a CS enthusiast, I 
                     am a big equity activist who pushes for equity and diversity in the technology sector and
                     aspires
                     to
-                    combine both my technological and activist background to develop real-world tecnological, equitable
+                    combine both my technological and activist background to develop real world tecnological, equitable
                     solutions.
                     <br>
                     My area of focus lies within integrating artificial intelligence to create equitable solutions to
-                    solve
-                    real-world problems in underresourced communities.
+                    solve real-world problems in underresourced communities and building web applications that have a social impact in society and in businesses.
                 </p>
             </div>
         </div>
@@ -3565,7 +3560,7 @@
                 100: Robotics Mechanisms <br> ROB 101: Computational Linear Algebra <br> EECS 281: Data Structures
                 and
                 Algorithms
-                <br> EECS 201: Computer Science Pragmatics
+                <br> EECS 201: Computer Science Pragmatics <br> EECS 370: Introduction to Computer Architecture <br> EECS 492: Introduction to Artifical Intelligence
             </p>
             <p> Activities: Google Student Developer Club, Miss STEM Careers, Michigan Autonomous Robotic Vehicles </p>
         </div>
