--- a/index.html
+++ b/index.html
@@ -3920,7 +3920,8 @@
     <div class="fade-in2 center contact-me-cont" id="Contact">
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST"
-            action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
+            action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec"
+            id="my-form">
             <input name="Email" type="email" placeholder="EMAIL" required
                 style="background-color: #adeaff; text-decoration: #003652; width:25vw;">
             <input name="Name" type="text" placeholder="NAME" required
