removing contact form redirection

--- a/index.html
+++ b/index.html
@@ -3984,7 +3984,7 @@
 
     <script src="Home.js"> </script>
 
-    <script>
+    <!--<script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec';
         const formy = document.getElementById('my-form');
         formy.addEventListener('submit', (e) => {
@@ -4003,7 +4003,7 @@
             })
             .catch(error => console.error('Error!', error.message));
         });
-      </script>
+      </script>-->
 </body>
 
 </html>
