--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Shriya Biddala </title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="SB_Logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;800&family=Poppins&family=Raleway:wght@300;400&family=Roboto+Condensed&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/fa913dc807.js" crossorigin="anonymous"></script>
+    <!--<script src="https://kit.fontawesome.com/fa913dc807.js" crossorigin="anonymous"></script>-->
 
     <style>
         body {
@@ -3984,7 +3983,7 @@
 
     <script src="Home.js"> </script>
 
-    <!--<script>
+    <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec';
         const formy = document.getElementById('my-form');
         formy.addEventListener('submit', (e) => {
@@ -4003,7 +4002,7 @@
             })
             .catch(error => console.error('Error!', error.message));
         });
-      </script>-->
+      </script>
 </body>
 
 </html>
