--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;800&family=Poppins&family=Raleway:wght@300;400&family=Roboto+Condensed&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/fa913dc807.js" crossorigin="anonymous"></script>
-    <link src="style.css" rel="stylesheet">
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
 
 </head>
 
