--- a/index.html
+++ b/index.html
@@ -511,10 +511,7 @@
         </div>
     </div>
 
-
-    <script src="Home.js"> </script>
-
-    <script>
+    <script src="Home.js">
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec';
         const formy = document.getElementById('my-form');
         formy.addEventListener('submit', (e) => {
