--- a/index.html
+++ b/index.html
@@ -467,12 +467,10 @@
 
 
 
-    <div class="fade-in2 fa-3x contact">
+    <div class="fade-in2 fa-3x" style="width: auto; height: auto">
         <h2 class="contact-text"> <a href="#Home" class="link-orange" style="color:rgb(194, 103, 0)"> Let's
                 Connect </a>
-            <br>
         </h2>
-        <br>
         <a href="https://www.instagram.com/shriya_bi/"><i class="fab fa-instagram fa-bounce"
                 style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
             </i></a>
@@ -485,7 +483,7 @@
 
         <a href="mailto:shriyarbiddala@gmail.com"> <i class="fa-solid fa-bounce fa-envelope"></i></a>
         <!--<i class="fa-solid fa-bounce fa-align-center fa-envelope"></i>-->
-
+        &nbsp; &nbsp;
         <!--<i class="fa-brands fa-google fa-bounce"
             style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
             <span class="google-hover-text"
@@ -493,9 +491,6 @@
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
         </i>-->
-
-
-         &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="Shriya Biddala - Resume.pdf"> <i class="fa-regular fa-file fa-bounce">
             <span class="file-lines-text"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
@@ -503,12 +498,14 @@
                 Resume </span>
             </i> </a> 
         <br>
-        <div style="display: flex; justify-content: space-between;">
-            <p class="copy-right-text">
-                &copy;Shriya Biddala</p>
-            <p class="copy-right-text" style="padding-right: 0.3125em;"> <a href="#Home" class="link-orange"
-                    style="color:rgb(194, 103, 0)"> Return to Home </a></p>
-        </div>
+        
+    </div>
+
+    <div style="display: flex; justify-content: space-between;">
+        <p class="copy-right-text">
+            &copy;Shriya Biddala</p>
+        <p class="copy-right-text" style="padding-right: 0.3125em;"> <a href="#Home" class="link-orange"
+                style="color:rgb(194, 103, 0)"> Return to Home </a></p>
     </div>
 
     <script src="Home.js">
