--- a/index.html
+++ b/index.html
@@ -467,7 +467,8 @@
 
 
 
-    <div class="fade-in2 fa-3x" style="width: auto; height: auto">
+    <div style="width: 100%; height: auto; justify-content: center; display: flex; align-items: center;"
+    <div class="fade-in2 fa-3x" style="width: auto; height: auto; justify-content: center; align-items: center; background-color: #adeaff; box-shadow: 1em 1em 1em 1em #dcf4fc;">
         <h2 class="contact-text"> <a href="#Home" class="link-orange" style="color:rgb(194, 103, 0)"> Let's
                 Connect </a>
         </h2>
@@ -500,6 +501,7 @@
         <br>
         
     </div>
+    </body>
 
     <div style="display: flex; justify-content: space-between;">
         <p class="copy-right-text">
