--- a/index.html
+++ b/index.html
@@ -467,11 +467,12 @@
 
 
 
-    <div style="width: 100%; height: auto; flex-direction: column; justify-content: center; display: flex; align-items: center;">
-    <div class="fade-in2 fa-3x" style="width: auto; height: auto; justify-content: center; align-items: center; background-color: #adeaff; box-shadow: 1em 1em 1em 1em #dcf4fc;">
+    <div class="fade-in2 fa-3x contact">
         <h2 class="contact-text"> <a href="#Home" class="link-orange" style="color:rgb(194, 103, 0)"> Let's
                 Connect </a>
+            <br>
         </h2>
+        <br>
         <a href="https://www.instagram.com/shriya_bi/"><i class="fab fa-instagram fa-bounce"
                 style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
             </i></a>
@@ -501,7 +502,6 @@
         <br>
         
     </div>
-    </body>
 
     <div style="display: flex; justify-content: space-between;">
         <p class="copy-right-text">
